# plottwist-scripts

./: .travis.yml  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
docs/sphinx/: conf.py  index.rst
plottwist/scripts/: __init__.py
plottwist/scripts/maya/: __init__.py  __logging__.ini  __version__.py  _version.py
plottwist/scripts/maya/surfacing/: cleaner_surfacing.py  connect_maps.py  connect_maps_udim.py  copy_uvs.py  tesselation.py  texture_path_relative.py
plottwist/scripts/surfacing/: CopyUvs.py
tests/: test_general.py
