[metadata]
name = plottwist-scripts-maya
description = Collection of independent Maya scripts for different departments
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: plottwist.scripts.maya.__version__.__version__
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/Plot-Twist-Short-Film/plottwist-scripts

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    pytest
    pytest-cov
    coveralls
    sphinx
    sphinx_rtd_theme

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = plottwist/scripts/_version.py
versionfile_build =
tag_prefix =
parentdir_prefix =